--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
-junitJupiterVersion=5.3.2
-slf4jVersion=1.7.6
-vaadinVersion=14.0.12
+springBootVersion=3.4.2
+vaadinVersion=24.6.5
+lombokVersion=8.6
